<resources>
    <string name="app_name">MyRuns3</string>
    <string name="profile_photo">Profile Photo:</string>
    <string name="Change">CHANGE</string>
    <string name="Name">Name</string>
    <string name="Your_Name">Your Name</string>
    <string name="Email">Email</string>
    <string name="Your_Email">Your Email</string>
    <string name="phone">Phone</string>
    <string name="your_ph">Your Phone Number</string>
    <string name="Gender">Gender</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Class">Class</string>
    <string name="eg">eg. 2012</string>
    <string name="Major">Major</string>
    <string name="your_major">Your Major</string>
    <string name="Save">SAVE</string>
    <string name="Cancel">CANCEL</string>
    <string name="Input_Type">Input Type</string>
    <string name="Activity_Type">Activity Type</string>
    <string name="START">START</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Duration">Duration</string>
    <string name="Distance">Distance</string>
    <string name="Calories">Calories</string>
    <string name="Heart_Rate">Heart Rate</string>
    <string name="Comment">Comment</string>
    <string name="SAVE">SAVE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity type</string>
    <string name="running">Running</string>
    <string name="date_and_time">Date and time</string>
    <string name="duration">Duration</string>
    <string name="DateTime">Date and Time</string>
    <string name="Dur">0secs</string>
    <string name="distance">Distance</string>
    <string name="_0_miles">0 Miles</string>
    <string name="calories">Calories</string>
    <string name="_0_cals">0 cals</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_0_bpm">0 bpm</string>
    <string name="EntryDetails">Entry Details</string>
    <string name="Dist">Distance, Duration</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration1">Duration</string>
    <string name="distance1">Distance</string>
    <string name="calories1">Calories</string>
    <string name="heart_rate1">Heart Rate</string>
    <string name="comment">Comment</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>

    <string-array name="input">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>

    </string-array>

</resources>