<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="28dp"
                android:layout_marginTop="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="92dp"
                android:layout_height="144dp"
                tools:layout_editor_absoluteX="90dp"
                tools:layout_editor_absoluteY="47dp"
                android:src="@android:drawable/btn_star_big_on"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Change"
                app:cornerRadius="0dp"
                tools:layout_editor_absoluteX="296dp"
                tools:layout_editor_absoluteY="104dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="221dp" />

            <EditText
                android:id="@+id/Your_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:hint="@string/Your_Name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="254dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="326dp" />

            <EditText
                android:id="@+id/Your_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:hint="@string/Your_Email"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="369dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="430dp" />

            <EditText
                android:id="@+id/Your_Ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:hint="@string/your_ph"
                tools:layout_editor_absoluteX="23dp"
                tools:layout_editor_absoluteY="472dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                tools:layout_editor_absoluteX="6dp"
                tools:layout_editor_absoluteY="527dp" />

            <RadioGroup
                android:id="@+id/Radio_Group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Class"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="626dp" />

                <EditText
                    android:id="@+id/Eg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/eg" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Major"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="326dp" />
                <EditText
                    android:id="@+id/Your_Major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/your_major" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/Save"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    tools:layout_editor_absoluteX="296dp"
                    tools:layout_editor_absoluteY="104dp"
                    android:layout_marginStart="5dp"
                    app:cornerRadius="0dp"/>
                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    tools:layout_editor_absoluteX="296dp"
                    tools:layout_editor_absoluteY="104dp"
                    app:cornerRadius="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>