<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Date"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Time"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Duration"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Distance"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Calories"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Heart_Rate"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Comment"
            android:textSize="16sp"
            android:background="?android:attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingTop="400dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/SAVE"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_grey"
            app:cornerRadius="0dp"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="104dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            app:cornerRadius="0dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_grey"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="104dp"
            android:text="@string/CANCEL" />
    </LinearLayout>
</LinearLayout>
